Fix resize problems

--- a/css/style.css
+++ b/css/style.css
@@ -440,11 +440,15 @@ body.offcanvas {
   height: 600px;
   margin-bottom: 30px; }
 
-.about-desc h3 {
-  font-size: 18px;
+.about-desc h2 {
+  font-size: 20px;
   text-transform: uppercase;
   letter-spacing: 5px;
   font-weight: 500; }
+
+.about-desc p {
+  font-size: 18px;
+}
 
 .hire {
   padding: 2em;
@@ -1445,7 +1449,7 @@ body.offcanvas {
   flex-direction: row;
   align-content: center;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
   width: 100%;
   height: 200px;
 }
