--- a/css/style.css
+++ b/css/style.css
@@ -1445,11 +1445,12 @@ body.offcanvas {
 
 
 .col-md-5 {
-  display: flex;
+  /* display: flex;
   flex-direction: row;
   align-content: center;
   justify-content: flex-start;
-  align-items: flex-start;
+  align-items: flex-start; */
   width: 100%;
-  height: 300px;
+  height: 600px;
+  font-size: 18px;
 }
