--- a/css/style.css
+++ b/css/style.css
@@ -307,7 +307,8 @@ figure {
           font-size: 30px;
           line-height: 1.3;
           font-weight: 700;
-          width: 25em; }
+          width: 25em;
+        }
           @media screen and (max-width: 768px) {
             #colorlib-hero .flexslider .slider-text > .slider-text-inner h1 {
               font-size: 28px; } }
