--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,8 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 400;
   margin: 0 0 30px 0; }
 
+
+
 figure {
   margin-bottom: 2.5em;
   float: left;
@@ -301,7 +303,9 @@ figure {
           margin: 0;
           padding: 0;
           color: black;
-          font-family: "Playfair Display", Georgia, serif; }
+          background: rgba(255, 255, 255, 0.3);
+          font-family: "Playfair Display", Georgia, serif; 
+        }
         #colorlib-hero .flexslider .slider-text > .slider-text-inner h1 {
           margin-bottom: 20px;
           font-size: 30px;
