--- a/css/style.css
+++ b/css/style.css
@@ -303,7 +303,6 @@ figure {
           margin: 0;
           padding: 0;
           color: black;
-          background: rgba(255, 255, 255, 0.3);
           font-family: "Playfair Display", Georgia, serif; 
         }
         #colorlib-hero .flexslider .slider-text > .slider-text-inner h1 {
@@ -664,8 +663,12 @@ body.offcanvas {
       color: #a84cb8; }
   .services.color-5 {
     border-bottom: 2px solid #2fa499; }
+    .services.color-5 .icon2 i {
+      color: #2fa499; }
   .services.color-6 {
-    border-bottom: 2px solid #4054b2; }
+    border-bottom: 2px solid #1900ff; }
+    .services.color-6 .icon2 i {
+      color: #fafafa; }
 
 .services {
   margin-bottom: 80px;
@@ -1110,7 +1113,8 @@ body.offcanvas {
     display: -moz-inline-stack;
     display: inline-block;
     zoom: 1;
-    *display: inline; }
+    *display: inline; 
+  }
     .colorlib-social li a {
       font-size: 22px;
       color: #000;
@@ -1458,4 +1462,8 @@ body.offcanvas {
   width: 100%;
   height: 600px;
   font-size: 18px;
+}
+
+.col-md-4 {
+  width: -webkit-fill-available;
 }
